--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 version: 1.4.0.{build}-{branch}
 pull_requests:
   do_not_increment_build_number: true
+branches:
+  only:
+  - master
 image: Visual Studio 2019
 configuration: Release
 platform: x86
